--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-richtextfield==1.4.0
 django-timezone-field==3.0
 geographiclib==1.49
 geopy==1.20.0
+gunicorn==19.9.0
 importlib-metadata==0.19
 kombu==4.6.4
 more-itertools==7.2.0
