--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ wheels/
 *.egg
 MANIFEST
 
+.idea
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -47,7 +49,7 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
-
+.idea/workspace.xml
 # Translations
 *.mo
 *.pot
